# Kwork_AkmetehAI

./: .dockerignore  .env.example  .gitignore  docker-compose.yml  readme.txt
telegram_bot/: Dockerfile  main.py  pyproject.toml  pytest.ini
telegram_bot/bot/: texts.py
telegram_bot/bot/aiogram_bot/: app.py
telegram_bot/bot/aiogram_bot/handlers/admins/: items_management.py  join.py  mass_send.py  stats.py
telegram_bot/bot/aiogram_bot/handlers/users/: any.py  menu.py  view.py
telegram_bot/bot/aiogram_bot/markups/: admin_keyboards.py  keyboards.py  user_keyboards.py
telegram_bot/bot/aiogram_bot/misc/: media_utils.py  states.py
telegram_bot/bot/aiogram_bot/misc/filters/: is_admin.py
telegram_bot/bot/aiogram_bot/misc/middlewares/: __init__.py  admin_middleware.py  antiflood_middleware.py  check_user_db_middleware.py  is_private_middleware.py  log_middleware.py  media_middleware.py  queue_middleware.py
telegram_bot/bot/database/: ensure_db_created.py  initialization.py  models.py
telegram_bot/bot/database/requests/: products.py  users.py
telegram_bot/bot/utils/: config.py  item_sender.py  logger.py
