[project]
name = "telegram-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.8",
    "pydantic-settings>=2.3",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "redis>=4.2",
    "sqlalchemy>=2.0.44",
]
